--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
   --resume-btn-bg: #fff;
   --resume-btn-color: #000;
   --resume-btn-hover-bg: #00CC66;
-  --resume-btn-hover-color: #fff;
+  --resume-btn-hover-color: #000;
   --footer-bg-color: #424141;
   --footer-text-color: #fff;
   --profile-img-border: #00CC66;
@@ -43,7 +43,7 @@ body.dark-mode {
   --resume-btn-bg: #fff;
   --resume-btn-color: #000;
   --resume-btn-hover-bg: #00CC66;
-  --resume-btn-hover-color: #fff;
+  --resume-btn-hover-color: #000;
   --footer-bg-color: #424141;
   --footer-text-color: #fff;
   --profile-img-border: #00CC66;
@@ -68,7 +68,7 @@ body.light-mode {
   --resume-btn-bg: #00CC66;
   --resume-btn-color: #fff;
   --resume-btn-hover-bg: #008040;
-  --resume-btn-hover-color: #fff;
+  --resume-btn-hover-color: #000;
   --footer-bg-color: #424141;
   --footer-text-color: #333;
   --profile-img-border: #00CC66;
@@ -93,7 +93,7 @@ body.light-mode .resume-btn {
 
 body.light-mode .resume-btn:hover {
   background: #00CC66;
-  color: #fff;
+  color: #000;
 }
 
 body.light-mode .toggle-theme i {
@@ -102,14 +102,14 @@ body.light-mode .toggle-theme i {
 
 body.light-mode .socials a:hover {
   background: var(--social-link-hover-bg);
-  /* green /
-color: var(--social-link-hover-color);
-/ black */
 }
 
 body.light-mode .socials a:hover i {
   color: #000;
-  /* ensure icon is black */
+}
+
+body.light-mode .justify {
+  color: #000;
 }
 
 body {
@@ -160,6 +160,7 @@ header {
 .justify {
   text-align: justify;
   font-size: 3;
+  color: #fff;
   margin-left: 20px;
   width: 95%;
   position: relative;
@@ -364,23 +365,30 @@ body.light-mode {
   .hamburger {
     position: absolute;
     top: 24px;
-    /* Adjust right values to control spacing between them */
   }
 
-  footer {
-    flex-direction: column;
-    text-align: center;
-    gap: 10px;
-    font-size: 0.95rem;
-  }
-
-  .footer-left,
-  .footer-right {
-    margin: 6px 0;
-    font-size: 0.95rem;
-  }
-}
-
+    footer {
+      flex-direction: column;
+      text-align: center;
+      font-size: 0.95rem;
+      padding-top: 24px;
+      padding-bottom: 24px;
+    }
+  
+    .footer-left,
+    .footer-right {
+      display: block;
+      width: 100%;
+      margin: 10px auto 0 auto;
+      text-align: center;
+      max-width: 90vw;
+    }
+  
+    .footer-right {
+      margin-bottom: 10px;
+    }
+    }
+    
 @media (max-width: 700px) {
   .toggle-theme {
     right: 24px;
